Fix mobile styling to adjust the resume so it can fit on mobile screens + desktops
Add new width to resume container
Add new responsive clamp fonts to text on resume

--- a/src/App.css
+++ b/src/App.css
@@ -10,5 +10,5 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  gap: 100px;
+  gap: 25px;
 }
