--- a/src/styles/UserResume.css
+++ b/src/styles/UserResume.css
@@ -1,8 +1,10 @@
 .resume-container {
     background-color: white;
     color: black;
-    min-width: 60%;
-    min-height: 800px;
+    min-height: 500px;
+    /* min-width: 95vw; */
+    width: 350px;
+    min-height: 700px;
 }
 
 .main-heading {
@@ -10,12 +12,12 @@
     justify-content: center;
     align-items: center;
     gap: 5px;
-    font-size: 16px;
+    font-size: clamp(.5em, .8em, 1.6em);
     margin-bottom: -30px;
 }
 
 .main-heading p {
-    font-size: large;
+    font-size: clamp(.5em, .7em, 1.5em);
     font-weight: bold;
 }
 
@@ -24,11 +26,20 @@
     justify-content: center;
     align-items: center;
     gap: 5px;
-    font-size: 14px;
+    font-size: clamp(.5em, .7em, 1.5em);
     font-weight: bold;
 }
 
 .info-heading a {
     color: black;
     text-decoration: none;
+}
+
+@media (min-width: 767px) {
+    body {
+        background-color: blue;
+    }
+    .resume-container {
+        width: 550px;
+    }
 }
